Revert changes made after 2026-08-27 17:10
