# packages/contracts/openapi/root.yaml
@@ -655,12 +655,6 @@ components:
           type: string
           minLength: 1
           maxLength: 100
-        system_prompt:
-          type:
-          - string
-          - 'null'
-          minLength: 1
-          maxLength: 1000
     JobRequirementInput:
       type: object
       additionalProperties: false
@@ -2518,7 +2512,6 @@ components:
         interview_stage:
           type: string
           enum:
-          - adaptive
           - technical
           - project_deep_dive
           - behavioral
@@ -2530,10 +2523,6 @@ components:
           - detail_missing
           - source_conflict
           - ownership_uncertain
-          - company_required_question
-          - job_requirement_required
-          - job_requirement_preferred
-          - criterion_baseline
         objective:
           type: string
           minLength: 1
@@ -2548,7 +2537,6 @@ components:
           - stage_opening
           - adaptive
           - stage_final
-          - company_required
         retrieval_version:
           type: string
           minLength: 1
